--- a/calendar/index.html
+++ b/calendar/index.html
@@ -14,7 +14,7 @@
         width:320px;
         height: 560px;
         border: 1px solid #707070;
-
+        overflow: hidden;
     }
     #context{
         font-size: 14px;
@@ -22,12 +22,23 @@
         width: inherit;
         height: 200px;
         background-color: #09bb07;
+        /* display: flex; */
+        padding: 5px;
     }
     #date{
         line-height: 36px;
-        font-size: 28px;
-        color:#f00;
-
+        font-size: 22px;
+        color:white;
+    }
+    #shengxiao{
+        width: 50px;
+        height: 50px;
+        font-size: 32px;
+        color: orangered;
+        float: right;
+    }
+    #time{
+        text-align: center;
     }
 </style>
 <body>
@@ -36,11 +47,11 @@
             <div id ="date"></div>
             <div id="weekend"></div>
             <div id="shengxiao"></div>
-            <div id="time"></div>
             <span id="jieri"></span>
             <span id="jieqi"></span>
             <div id="nongli"></div>
             <div id="tiangan"></div>
+            <div id="time"></div>
         </div>
     </div>
 </body>
