--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -11,7 +11,8 @@
 <!-- 显示日期详情 -->
   <div id="detail">
        <div id="date_content"></div>
-
+       <span id="jieri"></span>
+       <span id="jieqi"></span>
        <div id="animal_year"></div>
         <!-- 显示时钟 -->
         <p id="clock"></p>
@@ -121,7 +122,6 @@
            </table>
       </form>
    </div>
-
 </div>
 </body>
 </html>
