--- a/calendar/index.html
+++ b/calendar/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="js/index.js"></script>
-    <script src="js/calendar.js"></script>
+    <!-- <script src="js/calendar.js"></script> -->
 </head>
 <style>
     #contaiter{
