--- a/calendar/index.html
+++ b/calendar/index.html
@@ -71,7 +71,7 @@
     }
     .chinaDay{
         width:42px;
-        height: 16px;
+        height: 14px;
         background-color: chartreuse;
     }
 </style>
@@ -98,7 +98,7 @@
                 <td class="weekday">六</td>
             </tr>
         </table>
-        <div id="detail" onclick="getDetail()">
+        <div id="detail">
 
         </div>
     </div>
