--- a/calendar/index.html
+++ b/calendar/index.html
@@ -29,6 +29,12 @@
         line-height: 36px;
         font-size: 16px;
         color:white;
+        margin-left: 20px;
+    }
+    #weekend{
+        font-size: 24px;
+        color:#cccccc;
+        margin-left: 20px;
     }
     #shengxiao{
         width: 50px;
@@ -63,6 +69,7 @@
         width: 42px;
         height: 24px;
         background-color:#ff5f07;
+        margin-left:20px;
     }
     .sampleDay{
         width:42px;
