--- a/calendar/index.html
+++ b/calendar/index.html
@@ -27,8 +27,14 @@
     }
     #date{
         line-height: 36px;
-        font-size: 16px;
+        font-size: 22px;
         color:white;
+        padding-left: 10px;
+    }
+    #weekend{
+        padding-left: 10px;
+        color:#000;
+        font-size:18px;
     }
     #shengxiao{
         width: 50px;
@@ -67,12 +73,12 @@
     .sampleDay{
         width:42px;
         height:24px;
-        background-color: aquamarine;
+        background-color: rgb(212, 212, 212);
     }
     .chinaDay{
         width:42px;
         height: 14px;
-        background-color: chartreuse;
+        background-color: rgb(255, 210, 184);
     }
 </style>
 <body>
