//将每天的日期写入detail表中

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -68,12 +68,14 @@
     .weekend{
         width: 42px;
         height: 24px;
+        text-align: center;
         background-color:#ff5f07;
         margin-left:20px;
     }
     .sampleDay{
         width:42px;
         height:24px;
+        text-align: center;
         background-color: rgb(212, 212, 212);
     }
     .chinaDay{
@@ -81,6 +83,7 @@
         height: 14px;
         background-color: rgb(255, 210, 184);
     }
+
 </style>
 <body>
     <div id="contaiter">
