创建日期下拉菜单

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -85,12 +85,9 @@
     }
     #selectBox{
         background-color: aquamarine;
-        display: inline-block;
-        margin: 0 auto;
     }
-    .select{
-        width: 120px;
-        display: inline-block;
+    #select{
+        display: block;
         margin: 0 auto;
     }
 </style>
@@ -122,8 +119,8 @@
         </div>
         <div id="selectBox">
             <div id="select">
-                <select class="select" name="selectYear" id="selectYear"></select>
-                <select class="select" name="selectMonth" id="selectMonth"></select>
+                <select class="select"  id="selectYear"></select>
+                <select class="select"  id="selectMonth"></select>
             </div>
         </div>
     </div>
