修改选择控件样式

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -90,6 +90,11 @@
         display: block;
         margin: 0 auto;
     }
+    .dateSelect{
+        width: 90px;
+        display: inline-block;
+        margin: 0 0 0 45px;
+    }
 </style>
 <body>
     <div id="contaiter">
@@ -119,8 +124,8 @@
         </div>
         <div id="selectBox">
             <div id="select">
-                <select class="select"  id="selectYear"></select>
-                <select class="select"  id="selectMonth"></select>
+                <select class="dateSelect"  id="selectYear"></select>
+                <select class="dateSelect"  id="selectMonth"></select>
             </div>
         </div>
     </div>
