--- a/calendar/index.html
+++ b/calendar/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="js/index.js"></script>
-    <script src="js/calendar.js"></script>
+    <!-- <script src="js/calendar.js"></script> -->
 </head>
 <style>
     #contaiter{
         border-radius: 5px;
         width:320px;
-        height: 560px;
+        height: 570px;
         border: 1px solid #707070;
         /* overflow: hidden; */
     }
@@ -62,25 +62,28 @@
     }
     #detail{
         width:320px;
-        height: 300px;
+        /* height: 300px; */
         background-color: darkgray;
+        overflow: hidden;
+        margin-bottom: 5px;
     }
     .weekend{
         width: 42px;
-        height: 24px;
+        height: 22px;
         text-align: center;
         background-color:#ff7300;
         margin-left:20px;
     }
     .sampleDay{
         width:42px;
-        height:24px;
+        height:22px;
         text-align: center;
         background-color: rgb(196, 196, 196);
     }
     .chinaDay{
         width:42px;
         height: 14px;
+        font-size: 12px;
         background-color: rgb(231, 231, 231);
     }
     #selectBox{
@@ -94,6 +97,12 @@
         width: 90px;
         display: inline-block;
         margin: 0 0 0 45px;
+    }
+    #todayImg{
+        width:20px;
+        height:20px;
+        display: inline-block;
+        margin: 0 auto;
     }
 </style>
 <body>
@@ -125,6 +134,7 @@
         <div id="selectBox">
             <div id="select">
                 <select class="dateSelect"  id="selectYear"></select>
+                <span><img id="todayImg" src="./img/date.png" alt=""></span>
                 <select class="dateSelect"  id="selectMonth"></select>
             </div>
         </div>
